Wed Aug 25 13:32:22 BST 2004 (njh)
----------------------------------
  * libclamav/line.c:	Small code optimisation

Wed Aug 25 12:45:53 BST 2004 (njh)
----------------------------------
  * clamav-milter: Give hint about what do to if the running as root warning
			appears
		Optimise the sending of headers to clamd
		Give better SMTP status message when asking for retransmit
			when --dont-wait is set
		Quarantine files now handle operating system filename

Wed Aug 25 11:32:48 BST 2004 (njh)
----------------------------------
  * docs/man/clamav-milter.8:	Made recommendations about the best options
			to choose

Wed Aug 25 11:06:42 BST 2004 (trog)
-----------------------------------
  * libclamac/ole2_extract.c: fix error path memory leaks
	(thanks to acab and njh)

Wed Aug 25 10:13:43 CEST 2004 (acab)
------------------------------------
  * libclamav/petite.c: memory leaks fixed

Tue Aug 24 13:47:07 CEST 2004 (tk)
----------------------------------
  * libclamav: fix logic error in cli_filetype() (thanks to Tomasz Papszun)

Tue Aug 24 02:30:28 CEST 2004 (tk)
----------------------------------
  * libclamav: only enable signature file type recognition for text files

Mon Aug 23 22:32:02 CEST 2004 (tk)
----------------------------------
  * include database info in version string (requested by Jason Haar
    <Jason.Haar*trimble.co.nz>)

Mon Aug 23 14:15:42 BST 2004 (njh)
----------------------------------
  * libclamav:		Some emails included within the body of other emails
				(such as bounces and cut 'n' pastes) were
				being scanned twice

Mon Aug 23 11:25:01 BST 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Fix compilation error on Cygwin

Sun Aug 22 21:20:43 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	All email attachments are now scanned, previously only
				the first ten attachments were scanned

Sun Aug 22 19:03:12 CEST 2004 (tk)
----------------------------------
  * freshclam: Fix compilation errors
